<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StopAfstandActivity$PlaceholderFragment">

    <TextView android:text="@string/textSnelheid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSnelheid"/>


    <!--
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSnelheid"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textViewSnelheid"
        android:inputType="numberDecimal" />-->

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbSnelheid"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textViewSnelheid"
        android:inputType="numberDecimal"
        android:mirrorForRtl="false"
        android:max="200"
        android:indeterminate="false" />

    <TextView android:text="@string/textSnelheidWaarden"
        android:layout_below="@id/sbSnelheid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSnelheid"
        android:layout_centerHorizontal="true"/>

    <TextView android:text="@string/textReactietijd" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewReactieTijd"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textSnelheid" />

    <!--
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtReactieTijd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textViewReactietijd"
        android:inputType="numberDecimal"/>-->
    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbReactieTijd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textViewReactieTijd"
        android:inputType="numberDecimal"
        android:max="50" />

    <TextView android:text="@string/textReactietijdWaarden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textReactietijd"
        android:layout_below="@id/sbReactieTijd"
        android:layout_centerHorizontal="true"/>


    <TextView android:text="@string/textWegtype" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textWegtype"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textReactietijd" />


    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textWegtype" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDroog"
            android:id="@+id/rdbDroog"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioNat"
            android:id="@+id/rdbNat" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBereken"
        android:id="@+id/btnBereken"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_below="@id/radioGroup" />

    <TextView android:text="@string/textStopAfstand"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStopAfstand"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnBereken"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textStopAfstandRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStopAfstandRes"
        android:layout_below="@id/textViewStopAfstand"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
